fix: fixed project preview not showing on deploy

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,10 +39,10 @@ html{
     @apply cursor-pointer
   }
 
-  .mern-stack-memories{
+  /* .mern-stack-memories{
     @apply bg-cover;
     background-image: url('../public/assets/projects/memories-dummy-screen.png');
-  }
+  } */
 
 }
 
